--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,12 @@
 <resources>
-    <string name="app_name" translatable="false">My Application</string>
-    <string name="hello">Hello world</string>
-    <string name="random">Random</string>
-    <string name="next_activity">Next activity</string>
-    <string name="new_text">New text</string>
-    <string name="next">New text</string>
+
+    <string name="hello">hello</string>
+    <string name="app_name" />
+    <string name="my_fragments">My fragments</string>
+    <string name="switch_fragments">switch_fragments</string>
+    <string name="start_fragment">start_fragment</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="end_fragment">end_fragment</string>
+
 </resources>
